--- a/app_demo/modules/index/css/b_5000_index.css
+++ b/app_demo/modules/index/css/b_5000_index.css
@@ -1,3 +1,3 @@
 #content {
-  background: transparent url('[uf_module]/index/images/index.png') no-repeat scroll left top;
+  #background: transparent url('[uf_module]/index/images/index.png') no-repeat scroll left top;
 }
